--- a/src/admin.html
+++ b/src/admin.html
@@ -4,28 +4,68 @@
 <head>
     <meta charset="UTF-8">
     <title>管理页面</title>
+    <link rel="stylesheet" href="./css/default.css">
 </head>
 
 <body>
-    <style>
-        *{ margin: 0; padding: 0; }
-        #yyy{
-            padding: 50px 80px;
-            border-radius: 20px;
-            border: 2px dashed #ddd;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 200px;
-            flex-direction:column;
-        }
-    </style>
-    <div id="yyy">
-        <span id="xxx">点击或拖曳文件</span>
-        <p>文件大小不能超过 40MB</p>
+    <div class="page">
+        <aside>
+            <div class="newSong">
+                新建歌曲
+            </div>
+            <ul class="songList">
+                <li>歌曲1</li>
+                <li class="active">歌曲22222</li>
+                <li>歌曲3</li>
+                <li>歌曲4</li>
+                <li>歌曲555</li>
+                <li>歌曲6</li>
+                <li>歌曲7</li>
+                <li>歌曲8</li>
+                <li>歌曲9</li>
+                <li>歌曲10</li>
+            </ul>
+            <div class="uploadArea">
+                <div id="uploadContainer" class="draggable">
+                    <div id="uploadButton" class="clickable">
+                        <p>点击或拖曳文件</p>
+                        <p>文件大小不能超过 40MB</p>
+                    </div>
+                </div>
+            </div>
+        </aside>
+        <main>
+            <form class="form">
+                <div class="row">
+                    <label>
+                        歌名
+                        <input type="text">
+                    </label>
+                </div>
+                <div class="row">
+                    <label>
+                        歌手
+                        <input type="text">
+                    </label>
+                </div>
+                <div class="row">
+                    <label>
+                        外链
+                        <input type="text">
+                    </label>
+                </div>
+                <div class="row">
+                    <button type="submit">保存</button>
+                </div>
+            </form>
+        </main>
     </div>
-    <div id="uploadStatus"></div>
-    <audio controls src="http://p7y402mpp.bkt.clouddn.com/Simon%20-%20The%20Sound%20Of%20Silence.mp3"></audio>
+
+    <style>
+        
+    </style>
+    <!-- <div id="uploadStatus"></div>
+    <audio controls src="http://p7y402mpp.bkt.clouddn.com/Simon%20-%20The%20Sound%20Of%20Silence.mp3"></audio> -->
     <script src="../node_modules//leancloud-storage/dist/av-min.js"></script>
     <script>
         var APP_ID = 'HMtHtmOXfbjkblsXFTzTbfwR-gzGzoHsz';
@@ -41,18 +81,18 @@
     <script>
     var uploader = Qiniu.uploader({
         runtimes: 'html5',    //上传模式,依次退化
-        browse_button: 'xxx',       //上传选择的点选按钮，**必需**
+        browse_button: 'uploadButton',       //上传选择的点选按钮，**必需**
         uptoken_url: 'http://localhost:8888/uptoken',            //Ajax请求upToken的Url，**强烈建议设置**（服务端提供）
         // unique_names: true, // 默认 false，key为文件名。若开启该选项，SDK为自动生成上传成功后的key（文件名）。
         // save_key: true,   // 默认 false。若在服务端生成uptoken的上传策略中指定了 `sava_key`，则开启，SDK会忽略对key的处理
-        domain: 'http://qiniu-plupload.qiniudn.com/',   //bucket 域名，下载资源时用到，**必需**
+        domain: 'p7y402mpp.bkt.clouddn.com/',   //bucket 域名，下载资源时用到，**必需**
         get_new_uptoken: false,  //设置上传文件的时候是否每次都重新获取新的token
         // container: 'yyy',           //上传区域DOM ID，默认是browser_button的父元素，
         max_file_size: '40mb',           //最大文件体积限制
         // flash_swf_url: 'js/plupload/Moxie.swf',  //引入flash,相对路径
         // max_retries: 3,                   //上传失败最大重试次数
         dragdrop: true,                   //开启可拖曳上传
-        drop_element: 'yyy',        //拖曳上传区域元素的ID，拖曳文件或文件夹后可触发上传
+        drop_element: 'uploadContainer',        //拖曳上传区域元素的ID，拖曳文件或文件夹后可触发上传
         // chunk_size: '4mb',                //分块上传时，每片的体积
         auto_start: true,                 //选择文件后自动上传，若关闭需要自己绑定事件触发上传
         init: {
@@ -68,18 +108,12 @@
                     // 每个文件上传时,处理相关的事情
                     uploadStatus.textContent = '上传中'
             },
+            // 文件上传成功以后调用 FlieUploaded
             'FileUploaded': function(up, file, info) {
-                    uploadStatus.textContent = '上传完毕'                
-                    // 每个文件上传成功后,处理相关的事情
-                    // 其中 info.response 是文件上传成功后，服务端返回的json，形式如
-                    // {
-                    //    "hash": "Fh8xVqod2MQ1mocfI4S4KpRL6D98",
-                    //    "key": "gogopher.jpg"
-                    //  }
-                    // 参考http://developer.qiniu.com/docs/v6/api/overview/up/response/simple-response.html
-                    // var domain = up.getOption('domain');
-                    // var res = parseJSON(info.response);
-                    // var sourceLink = domain + res.key; 获取上传成功后的文件的Url
+                var domain = up.getOption('domain');
+                var response = JSON.parse(info.response);
+                var sourceLink = 'http://' + domain + '/' + encodeURIComponent(response.key);
+                uploadStatus.textContent = sourceLink + ' ' + response.key
             },
             'Error': function(up, err, errTip) {
                     //上传出错时,处理相关的事情
