--- a/src/admin.html
+++ b/src/admin.html
@@ -28,6 +28,8 @@
         </main>
     </div>
 
+    <div id="siteLoading" class="site-loading"></div>
+
     <script src="../node_modules//leancloud-storage/dist/av-min.js"></script>
     <script src="./js/initializers/av.js"></script>
     <script src="../node_modules/jquery/dist/jquery.min.js"></script>
@@ -35,6 +37,7 @@
     <script src="../node_modules/plupload/js/plupload.min.js"></script>
     <script src="../node_modules/qiniu-js/dist/qiniu.min.js"></script>
     <script src="./js/event-hub.js"></script>
+    <script src="./js/loading.js"></script>
     <script src="./js/song-form.js"></script>
     <script src="./js/new-song.js"></script>
     <script src="./js/song-list.js"></script>
